Corrige issues indicadas pelo IntelliJ e SonarLint