@@ -3,18 +3,20 @@ package br.com.breadware.util;
 import org.springframework.stereotype.Component;
 
 import javax.inject.Inject;
-import java.time.*;
+import java.time.Instant;
+import java.time.ZoneId;
+import java.time.ZonedDateTime;
 import java.time.format.DateTimeFormatter;
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.Locale;
 import java.util.Map;
 
 @Component
 public class ZonedDateTimeUtil {
 
+    @SuppressWarnings("SpellCheckingInspection")
     private static final DateTimeFormatter EN_DATE_TIME_FORMATTER = DateTimeFormatter.ofPattern("MM/dd/yyyy HH:mm:ss '['XXX']' '('zzzz')'");
 
+    @SuppressWarnings("SpellCheckingInspection")
     private static final DateTimeFormatter PT_BR_DATE_TIME_FORMATTER = DateTimeFormatter.ofPattern("dd/MM/yyyy HH:mm:ss '['XXX']' '('zzzz')'");
 
     private static final DateTimeFormatter DEFAULT_DATE_TIME_FORMATTER = EN_DATE_TIME_FORMATTER;
@@ -22,13 +24,7 @@ public class ZonedDateTimeUtil {
     private static final Map<String, DateTimeFormatter> DATE_TIME_FORMATTERS_BY_LOCALE;
 
     static {
-        Map<String, DateTimeFormatter> dateTimeFormattersByLocale = new HashMap<>();
-
-        dateTimeFormattersByLocale.put(Locale.ENGLISH.getDisplayName(), EN_DATE_TIME_FORMATTER);
-
-        dateTimeFormattersByLocale.put("pt-BR", PT_BR_DATE_TIME_FORMATTER);
-
-        DATE_TIME_FORMATTERS_BY_LOCALE = Collections.unmodifiableMap(dateTimeFormattersByLocale);
+        DATE_TIME_FORMATTERS_BY_LOCALE = Map.of(Locale.ENGLISH.getDisplayName(), EN_DATE_TIME_FORMATTER, "pt-BR", PT_BR_DATE_TIME_FORMATTER);
     }
 
     private final ZoneId zoneId;
@@ -41,20 +37,12 @@ public class ZonedDateTimeUtil {
         this.locale = locale;
     }
 
-    public ZonedDateTime convertFromEpochSecond(long epochSecond) {
-        return ZonedDateTime.ofInstant(Instant.ofEpochSecond(epochSecond), zoneId);
-    }
-
-    public ZonedDateTime convertFromEpochMillis(long epochMillis) {
-        return ZonedDateTime.ofInstant(Instant.ofEpochMilli(epochMillis), zoneId);
-    }
-
     public String writeAsHumanReadableFormat(ZonedDateTime zonedDateTime) {
         return retrieveDateTimeFormatter().format(zonedDateTime);
     }
 
     private DateTimeFormatter retrieveDateTimeFormatter() {
-        return DATE_TIME_FORMATTERS_BY_LOCALE.getOrDefault(locale, DEFAULT_DATE_TIME_FORMATTER);
+        return DATE_TIME_FORMATTERS_BY_LOCALE.getOrDefault(locale.getDisplayName(), DEFAULT_DATE_TIME_FORMATTER);
     }
 
     public ZonedDateTime convertFromUtcInstant(Instant utcInstant) {
